--- a/css/nsh.css
+++ b/css/nsh.css
@@ -10,6 +10,7 @@ body {
 }
 
 .prompt::before {
+	color: green;
     content: "> ";
 }
 
@@ -21,7 +22,7 @@ body {
 
 .output {
 	word-break: break-word;
-    white-space: pre;
+    white-space: pre-wrap;
     tab-size: 4;
 }
 
