--- a/css/nsh.css
+++ b/css/nsh.css
@@ -6,12 +6,17 @@ body {
 }
 
 .welcome {
-	word-break: break-word;
+    word-break: break-word;
 }
 
 .prompt::before {
-	color: green;
+    color: green;
     content: "> ";
+}
+
+.active-prompt-container {
+    width: 100%;
+    display: inline-block;
 }
 
 .prompt.active::after {
@@ -21,7 +26,7 @@ body {
 }
 
 .output {
-	word-break: break-word;
+    word-break: break-word;
     white-space: pre-wrap;
     tab-size: 4;
 }
